--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
     "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-    "version": "0.0.0",
+    "version": "0.1.0-alpha.0",
     "packages": [
         "packages/bot",
         "packages/cli",
