--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/provider",
-    "version": "0.0.161-alpha.0",
+    "version": "0.1.0-alpha.0",
     "description": "Esto es el conector a Twilio, Meta, etc...",
     "main": "./lib/mock/index.cjs",
     "keywords": [],
@@ -20,9 +20,9 @@
         "fluent-ffmpeg": "^2.1.2",
         "follow-redirects": "^1.15.2",
         "qr-image": "^3.2.0",
+        "queue-promise": "^2.2.1",
         "rimraf": "^3.0.2",
-        "sharp": "^0.30.5",
-        "queue-promise": "^2.2.1"
+        "sharp": "^0.30.5"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
