--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "private": true,
     "scripts": {
         "commit": "git-cz",
-        "cli:rollup": "rollup --config ./packages/cli/rollup-cli.config.js ",
-        "create-bot:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup-create.config.js ",
-        "bot:rollup": "rollup --config ./packages/bot/rollup-bot.config.js",
+        "cli:rollup": "rollup --config ./packages/cli/rollup.config.js ",
+        "create-bot:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup.config.js ",
+        "bot:rollup": "rollup --config ./packages/bot/rollup.config.js",
         "provider:rollup": "rollup --config ./packages/provider/rollup-provider.config.js ",
         "contexts:rollup": "rollup --config ./packages/contexts/rollup-contexts.config.js",
         "database:rollup": "rollup --config ./packages/database/rollup-database.config.js",
-        "eslint-plugin:rollup": "rollup --config ./packages/eslint-plugin-bot-whatsapp/rollup-eslint.config.js",
-        "create-bot-whatsapp:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup-create.config.js",
-        "portal:rollup": "rollup --config ./packages/portal/rollup-portal.config.js",
+        "eslint-plugin:rollup": "rollup --config ./packages/eslint-plugin-bot-whatsapp/rollup.config.js",
+        "create-bot-whatsapp:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup.config.js",
+        "portal:rollup": "rollup --config ./packages/portal/rollup.config.js",
         "format:check": "prettier --check ./packages",
         "format:write": "prettier --write ./packages",
         "fmt.staged": "pretty-quick --staged",
@@ -24,7 +24,7 @@
         "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run eslint-plugin:rollup && pnpm run portal:rollup",
         "build": "pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup && pnpm run eslint-plugin:rollup",
         "copy.lib": "node ./scripts/move.js",
-        "test.unit": "node ./node_modules/uvu/bin.js packages test",
+        "test.unit": "node ./node_modules/uvu/bin.js packages test -i bot-ts",
         "test.e2e": "node ./node_modules/uvu/bin.js __test__ ",
         "test.coverage": "node ./node_modules/c8/bin/c8.js npm run test.unit",
         "test": "npm run test.coverage",
