--- a/packages/database-ts/package.json
+++ b/packages/database-ts/package.json
@@ -28,6 +28,12 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "mongodb": "^4.11.0",
+        "mysql2": "^2.3.3",
+        "pg": "^8.11.2"
+    },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
