--- a/packages/database-json/package.json
+++ b/packages/database-json/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/database-json",
-    "version": "0.1.1-alpha.1+11f7eab",
+    "version": "0.1.2-alpha.0",
     "description": "Esto es el conector a json",
     "keywords": [],
     "author": "Leifer Mendez <leifer33@gmail.com>",
