--- a/packages/provider-baileys/package.json
+++ b/packages/provider-baileys/package.json
@@ -36,10 +36,13 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/mime-types": "^2.1.4",
         "@types/node": "^20.11.0",
+        "@types/polka": "^0.5.7",
         "@types/qr-image": "^3.2.9",
         "@types/sharp": "^0.32.0",
+        "body-parser": "^1.20.2",
         "mime-types": "^2.1.35",
         "pino": "^7.11.0",
+        "polka": "^0.5.2",
         "qr-image": "^3.2.0",
         "rimraf": "^5.0.5",
         "rollup-plugin-typescript2": "^0.36.0",
