--- a/packages/provider-web-whatsapp/package.json
+++ b/packages/provider-web-whatsapp/package.json
@@ -37,11 +37,13 @@
         "@types/node": "^20.11.0",
         "@types/qr-image": "^3.2.9",
         "@types/sharp": "^0.32.0",
+        "@types/sinon": "^17.0.3",
         "mime-types": "^2.1.35",
         "pino": "^7.11.0",
         "qr-image": "^3.2.0",
         "rimraf": "^5.0.5",
-        "rollup-plugin-typescript2": "^0.36.0"
+        "rollup-plugin-typescript2": "^0.36.0",
+        "sinon": "^17.0.1"
     },
     "dependencies": {
         "whatsapp-web.js": "^1.23.0"
