--- a/packages/database-postgres/package.json
+++ b/packages/database-postgres/package.json
@@ -37,6 +37,7 @@
         "@rollup/plugin-terser": "^0.4.4",
         "@types/node": "^20.11.0",
         "@types/pg": "^8.10.9",
+        "@types/sinon": "^17.0.3",
         "kleur": "^4.1.5",
         "rimraf": "^3.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
