--- a/packages/contexts-dialogflow-cx/package.json
+++ b/packages/contexts-dialogflow-cx/package.json
@@ -29,7 +29,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "dependencies": {
-        "@builderbot/bot": "workspace:*",
+        "@builderbot/bot": "0.1.3-alpha.22",
         "@google-cloud/dialogflow-cx": "^4.3.1"
     },
     "devDependencies": {
@@ -44,5 +44,5 @@
         "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1"
     },
-    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
+    "gitHead": "0fb50a130573d7a1f6b1cd7fcfa0fdf1b8f9d578"
 }
