--- a/packages/provider-meta/package.json
+++ b/packages/provider-meta/package.json
@@ -38,7 +38,7 @@
         "queue-promise": "^2.2.1"
     },
     "devDependencies": {
-        "@builderbot/bot": "workspace:*",
+        "@builderbot/bot": "0.1.3-alpha.22",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -55,5 +55,5 @@
         "tslib": "^2.6.2",
         "tsm": "^2.3.0"
     },
-    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
+    "gitHead": "0fb50a130573d7a1f6b1cd7fcfa0fdf1b8f9d578"
 }
