--- a/packages/provider-twilio/package.json
+++ b/packages/provider-twilio/package.json
@@ -28,7 +28,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "devDependencies": {
-        "@builderbot/bot": "workspace:*",
+        "@builderbot/bot": "0.1.3-alpha.22",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -52,5 +52,5 @@
         "polka": "^0.5.2",
         "twilio": "4.20.0"
     },
-    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
+    "gitHead": "0fb50a130573d7a1f6b1cd7fcfa0fdf1b8f9d578"
 }
