--- a/packages/provider-venom/package.json
+++ b/packages/provider-venom/package.json
@@ -29,7 +29,7 @@
     },
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "devDependencies": {
-        "@builderbot/bot": "workspace:*",
+        "@builderbot/bot": "0.1.3-alpha.22",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -54,5 +54,5 @@
         "polka": "^0.5.2",
         "venom-bot": "^5.0.21"
     },
-    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
+    "gitHead": "0fb50a130573d7a1f6b1cd7fcfa0fdf1b8f9d578"
 }
