--- a/packages/provider-wppconnect/package.json
+++ b/packages/provider-wppconnect/package.json
@@ -25,7 +25,7 @@
     },
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "devDependencies": {
-        "@builderbot/bot": "workspace:*",
+        "@builderbot/bot": "0.1.3-alpha.22",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -50,5 +50,5 @@
         "body-parser": "^1.20.2",
         "polka": "^0.5.2"
     },
-    "gitHead": "cb94c90c05492a02dda63a8f48e661bf2995d4fb"
+    "gitHead": "0fb50a130573d7a1f6b1cd7fcfa0fdf1b8f9d578"
 }
