--- a/packages/contexts-dialogflow/package.json
+++ b/packages/contexts-dialogflow/package.json
@@ -29,7 +29,7 @@
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
     "dependencies": {
-        "@builderbot/bot": "0.1.3-alpha.22",
+        "@builderbot/bot": "^0.1.3-alpha.22",
         "@google-cloud/dialogflow": "^6.2.0"
     },
     "devDependencies": {
@@ -44,5 +44,5 @@
         "rollup-plugin-typescript2": "^0.36.0",
         "sinon": "^17.0.1"
     },
-    "gitHead": "0fb50a130573d7a1f6b1cd7fcfa0fdf1b8f9d578"
+    "gitHead": "e52a9fe13d30d65b650a54b6e116953c949b1158"
 }
