--- a/packages/provider-web-whatsapp/package.json
+++ b/packages/provider-web-whatsapp/package.json
@@ -29,7 +29,7 @@
     },
     "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "devDependencies": {
-        "@builderbot/bot": "0.1.3-alpha.22",
+        "@builderbot/bot": "^0.1.3-alpha.22",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
@@ -51,5 +51,5 @@
         "polka": "^0.5.2",
         "whatsapp-web.js": "^1.23.0"
     },
-    "gitHead": "0fb50a130573d7a1f6b1cd7fcfa0fdf1b8f9d578"
+    "gitHead": "e52a9fe13d30d65b650a54b6e116953c949b1158"
 }
