--- a/packages/eslint-plugin-bot-whatsapp/package.json
+++ b/packages/eslint-plugin-bot-whatsapp/package.json
@@ -41,5 +41,6 @@
         "sinon": "^17.0.1",
         "tslib": "^2.6.2",
         "tsm": "^2.3.0"
-    }
+    },
+    "gitHead": "f21e49621dffad2a1226aecea535668016f07b14"
 }
