--- a/packages/eslint-plugin-bot-whatsapp/package.json
+++ b/packages/eslint-plugin-bot-whatsapp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eslint-plugin-bot-whatsapp",
-    "version": "0.3.0-alpha.0",
+    "version": "1.0.0",
     "description": "> TODO: description",
     "author": "vicente1992 <vic_ortiz20@hotmail.es>",
     "homepage": "https://github.com/vicente1992/bot-whatsapp#readme",
