--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,23 @@
 {
   "version": "1.0.0",
   "packages": [
-    "packages/*"
+    "packages/bot",
+    "packages/cli",
+    "packages/create-builderbot",
+    "packages/database-mongo",
+    "packages/database-mysql",
+    "packages/database-json",
+    "packages/database-postgres",
+    "packages/eslint-plugin-bot-whatsapp-ts",
+    "packages/provider-meta",
+    "packages/provider-bailey",
+    "packages/provider-baileys",
+    "packages/provider-twilio",
+    "packages/provider-web-whatsapp",
+    "packages/provider-wppconnect",
+    "packages/provider-venom",
+    "packages/contexts-dialogflow",
+    "packages/contexts-dialogflow-cx"
   ],
   "npmClient": "pnpm",
   "$schema": "node_modules/lerna/schemas/lerna-schema.json"
