--- a/starters/apps/base-js-twilio-mysql/package.json
+++ b/starters/apps/base-js-twilio-mysql/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "prestart": "npx eslint . --no-ignore",
+        "dev": "nodemon src/app.js",
         "start": "node app.js"
       },
     "keywords": [],
@@ -15,7 +16,8 @@
         "@builderbot/provider-baileys": "latest"
     },
     "devDependencies": {
-        "eslint-plugin-builderbot": "latest"
+        "eslint-plugin-builderbot": "latest",
+        "nodemon": "^3.1.0"
     },
     "author": "",
     "license": "ISC"
